--- a/ipynb/01-Extract-Data-Business-software.ipynb
+++ b/ipynb/01-Extract-Data-Business-software.ipynb
@@ -75,7 +75,7 @@
     }
    ],
    "source": [
-    "wiki=WikiAPI('Category:'+cat_name)"
+    "wiki=WikiAPI('Category:'+cat_name, run=False)"
    ]
   },
   {
